// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Integration::reset password check email  should redisplay page with error 1`] = `
Object {
  "contentId": "b78d016b-0f2c-4599-9c2f-76b3a6397997",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "account recovery",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration::reset password check email  should return 2hr error page when 6 incorrect codes entered and flag is turned on 1`] = `
Object {
  "contentId": "",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "account recovery",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration::reset password check email  should return error page when 6 password reset codes requested 1`] = `
Object {
  "contentId": "",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "account recovery",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration::reset password check email  should return error page when blocked from requesting codes 1`] = `
Object {
  "contentId": "",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "account recovery",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration::reset password check email  should return internal server error when /reset-password-request API call response is 500 1`] = `
Object {
  "contentId": "",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "account recovery",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration::reset password check email  should return reset password check email page 1`] = `
Object {
  "contentId": "b78d016b-0f2c-4599-9c2f-76b3a6397997",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "account recovery",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;
